--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,8 +1,14 @@
 directoryPath: "D:\\test"
 searchConfigs:
+  - file: "abcd.config"
+    searchText: "name"
+    expectResult: "<>xiaoming"
   - file: "abc.config"
     searchText: "name"
     expectResult: "<>xiaoming"
+  - file: "abc.config"
+    searchText: "age"
+    expectResult: "23"
   - file: "cba.config"
     searchText: "age"
     expectResult: "23"
